--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,44 +1,3 @@
-.md_transition {
-    
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transition: transform 1s cubic-bezier(.39, .575, .565, 1) 0.1s; 
-    z-index: 999999;
-}
-.md_transition::before {
-   
-    background: -webkit-gradient(linear, left bottom, left top, from(hsla(0, 0%, 100%, 0)), color-stop(33.33333%, #fff), color-stop(66.66667%, #fff), to(hsla(0, 0%, 100%, 0)));
-    background: -o-linear-gradient(bottom, hsla(0, 0%, 100%, 0) 0, #fff 33.33333%, #fff 66.66667%, hsla(0, 0%, 100%, 0) 100%);
-    background: linear-gradient(0deg, hsla(0, 0%, 100%, 0), #fff 33.33333%, #fff 66.66667%, hsla(0, 0%, 100%, 0));
-    content: "";
-    display: block;
-    width: 100%;
-    height: 300%;
-    position: absolute;
-    left: 0;
-    top: -100%;
-}
-body.is_remove .md_transition {
-    
-    -webkit-animation: maskCloseTransition .4s cubic-bezier(.47, 0, .745, .715) 0s 1 forwards;
-    animation: maskCloseTransition .1s cubic-bezier(.47, 0, .745, .715) 0s 1 forwards;
-    
-}
-body:not(.is_fade) .md_transition {
-    transform: translateY(-200%);
-}
-@-webkit-keyframes maskCloseTransition {
-    
-    0% { transform: translateY(200%); }
-    to { transform: translate(0); }
-}
-@keyframes maskCloseTransition {
-    0% { transform: translateY(200%); }
-    to { transform: translate(0); }
-}
 body{
     margin:0px;
     margin-bottom:0px;
@@ -64,52 +23,39 @@ img.background_2{
     margin-left:700px;
     margin-top: -542px;
 }
-/*STARTボタン*/
-.fadeup {
-    animation: fadeup 1s cubic-bezier(0.33, 1, 0.68, 1) 1 forwards;
-  }
-   
-  @keyframes fadeup {
-    0% {
-      transform: translateY(30px);
-      opacity: 0;
-    }
-    80% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
-  
-  
-  .only-background {
+.md_transition {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.3s cubic-bezier(.39, .575, .565, 1) 0s; 
+    z-index: 999999;
+}
+.md_transition::before {
+    background: -webkit-gradient(linear, left bottom, left top, from(hsla(0, 0%, 100%, 0)), color-stop(33.33333%, #fff), color-stop(66.66667%, #fff), to(hsla(0, 0%, 100%, 0)));
+    background: -o-linear-gradient(bottom, hsla(0, 0%, 100%, 0) 0, #fff 33.33333%, #fff 66.66667%, hsla(0, 0%, 100%, 0) 100%);
+    background: linear-gradient(0deg, hsla(0, 0%, 100%, 0), #fff 33.33333%, #fff 66.66667%, hsla(0, 0%, 100%, 0));
+    content: "";
+    display: block;
+    width: 100%;
+    height: 300%;
     position: absolute;
-    font-size: 800%;
-    bottom: 180px;
-    left:140px;
-    font-family:"'Ubuntu Mono', monospace";
-    color:rgb(102, 94, 94);
-    padding:0;
-    margin: 1px; 
-    padding: 16px;
-    color: rgb(41, 20, 20);
-    transition: background 1s;
-    transition: all 0.5s 0s ease;
-
-    
-  }
-  
-  
-
-    .only-background:hover {
-    color:rgb(197, 181, 181);
-    }
-
-    a {
-        text-decoration:none; 
-    }
-   
-
-  /*STARTボタン end*/
+    left: 0;
+    top: -100%;
+}
+body.is_remove .md_transition {
+    -webkit-animation: maskCloseTransition 0.1s cubic-bezier(.47, 0, .745, .715) 0.1s 1 forwards;
+    animation: maskCloseTransition 0.2s cubic-bezier(.47, 0, .745, .715) 0.1s 1 forwards;
+}
+body:not(.is_fade) .md_transition {
+    transform: translateY(-200%);
+}
+@-webkit-keyframes maskCloseTransition {
+    0% { transform: translateY(200%); }
+    to { transform: translate(0); }
+}
+@keyframes maskCloseTransition {
+    0% { transform: translateY(200%); }
+    to { transform: translate(0); }
+}
