--- a/CSS/title.css
+++ b/CSS/title.css
@@ -42,13 +42,14 @@ img.background_2{
     }
   }
   
-  
+
   .only-background {
     position: absolute;
     font-size: 800%;
     bottom: 180px;
     left:140px;
-    font-family:"'Ubuntu Mono', monospace";
+    
+    font-family: 'Noto Sans JP', sans-serif;
     color:rgb(102, 94, 94);
     padding:0;
     margin: 1px; 
