--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,5 +1,6 @@
 .nitiji{
     float:right;
+    margin-right: 2%;
 }
 .rogo{
     font: size 100px;
@@ -10,4 +11,8 @@
 .kuuhaku{
     padding-top:3%;
     padding-bottom:2%;
+}
+.hr1{
+    height:1px;
+    background-color: black;
 }
