--- a/CSS/index.css
+++ b/CSS/index.css
@@ -62,8 +62,8 @@ img.background_2{
     height: auto;
     vertical-align: top;
     background-size: contain;
-    margin-left:700px;
-    margin-top: -542px;
+    margin-left:50%;
+    margin-top: -45%;
 }
 /** {
     margin: 0px;
@@ -73,7 +73,7 @@ div.header{
     position: fixed;
         top: 0px;
         width: 100%;
-        height: 13%;
+        height: 16%;
         border:1px solid #ccc;
         background-color: rgba(255, 255, 255, 0.589);
 }
