--- a/CSS/establishment.css
+++ b/CSS/establishment.css
@@ -1,7 +1,19 @@
-table,td,tr{
+/** テーブル関係 */
+.setting,td,tr{
     border:1px #2b2b2b solid;
-    width: 100%;
+    width:100%;
+    height:70px;
+    z-index: 10000;
+    margin-top:10px;
 }
-.setting{
-    padding:5%;
+.moji{
+    padding-left:20px;
+}
+/** ヘッダーぐちゃぐちゃにならない用 */
+div.header{
+    position: fixed;
+        top: 0px;
+        width: 100%;
+        height: 16%;
+        background-color: rgba(255, 255, 255, 0.589);
 }
