--- a/CSS/title.css
+++ b/CSS/title.css
@@ -84,6 +84,6 @@ img.background_2{
     margin-left:40.5%;
     margin-top:20%;
     font-size :400%;
-    z-index:10000
+    z-index:10000;
 }
   /*ロゴend*/
