--- a/CSS/establishment.css
+++ b/CSS/establishment.css
@@ -6,6 +6,9 @@
     z-index: 10000;
     margin-top:10px;
 }
+.setting{
+    margin-top:10%;
+}
 .moji{
     padding-left:20px;
 }
@@ -16,4 +19,71 @@ div.header{
         width: 100%;
         height: 16%;
         background-color: rgba(255, 255, 255, 0.589);
+}
+/** 背景 */
+/**.md_transition {
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: transform 1.5s cubic-bezier(.39, .575, .565, 1) 0.1s; 
+    z-index: 999999;
+}*/
+/*:.md_transition::before {
+
+    background: -webkit-gradient(linear, left bottom, left top, from(hsla(0, 0%, 100%, 0)), color-stop(33.33333%, #fff), color-stop(66.66667%, #fff), to(hsla(0, 0%, 100%, 0)));
+    background: -o-linear-gradient(bottom, hsla(0, 0%, 100%, 0) 0, #fff 33.33333%, #fff 66.66667%, hsla(0, 0%, 100%, 0) 100%);
+    background: linear-gradient(0deg, hsla(0, 0%, 100%, 0), #fff 33.33333%, #fff 66.66667%, hsla(0, 0%, 100%, 0));
+    content: "";
+    display: block;
+    width: 100%;
+    height: 300%;
+    position: absolute;
+    left: 0;
+    top: -100%;
+}*/
+/**body.is_remove .md_transition {
+
+    -webkit-animation: maskCloseTransition .4s cubic-bezier(.47, 0, .745, .715) 0s 1 forwards;
+    animation: maskCloseTransition .1s cubic-bezier(.47, 0, .745, .715) 0s 1 forwards;
+
+}*/
+/**body:not(.is_fade) .md_transition {
+    transform: translateY(-200%);
+}*/
+/**@-webkit-keyframes maskCloseTransition {
+
+    0% { transform: translateY(200%); }
+    to { transform: translate(0); }
+}*/
+/**@keyframes maskCloseTransition {
+    0% { transform: translateY(200%); }
+    to { transform: translate(0); }
+}*/
+body{
+    margin:0px;
+    margin-bottom:0px;
+    padding:0%;
+    overflow: hidden;
+}
+
+img.background_1{
+    width: 100%;
+    height: auto;
+    vertical-align: top;
+    background-size: contain;
+    margin-top: 0px;
+
+}
+/**立ち絵*/
+img.background_2{
+    position:relative;
+    width: 45%;
+    height: auto;
+    vertical-align: top;
+    background-size: contain;
+    margin-left:50%;
+    margin-top: -45%;
 }
