--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -19,10 +19,9 @@ body
 =======
 }*/
 
->>>>>>> 46f6ca8ba813e3c8d1b07ec2fad98682cea4109b
 .navi
 {
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 70px;
