--- a/CSS/establishment.css
+++ b/CSS/establishment.css
@@ -2,7 +2,7 @@
 .setting,td,tr{
     position:relative;
     width:100%;
-    
+    height: 7vh;
     z-index: 500;
 }
 .setting td{
@@ -12,29 +12,28 @@
     content: attr(data-label);
     font-weight: bold;
     position: absolute;
-    left: 10px;
+    left: 10%;
   }
 
 .setting{
-    margin-top: -49%;
+    margin-top: -48%;
     border-collapse: collapse;
     border-spacing: 0;
-    margin-bottom: 1%;
     background-color: rgb(255, 255, 255, 0.589);
     border-collapse: collapse;
-    height:100%;
 }
 .setting tr {
     border-bottom: 1px solid #bbb;
   }
 
 .setting th,.setting td{
-    padding: 10px 0;
+    padding: 1% 0;
   text-align: center;
 }
 /** テーブル内の文字 */
 .mojibox{
-    padding-left:20px;
+    padding-left:20%;
+    margin-bottom:10%;
 }
 .moji{
     text-decoration-line: none;
@@ -43,10 +42,11 @@
 /** ヘッダーぐちゃぐちゃにならない用 */
 div.header{
     position: fixed;
-        top: 0px;
+        top: 0%;
         width: 100%;
         height: 16%;
         z-index:1000;
+        padding-bottom:10px;
 }
 div.footer{
     position: relative;
@@ -54,8 +54,8 @@ div.footer{
 }
 /** 背景 */
 body{
-    margin:0px;
-    margin-bottom:0px;
+    margin:0%;
+    margin-bottom:0%;
     padding:0%;
     overflow: hidden;
 }
@@ -65,7 +65,7 @@ img.background_1{
     height: auto;
     vertical-align: top;
     background-size: contain;
-    margin-top: 0px;
+    margin-top: 0%;
     z-index: 1;
 }
 /**立ち絵*/
