--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -21,10 +21,10 @@ body
 
 .navi
 {
-    position: relative;
+    position: fixed;
     bottom: 0;
     width: 100%;
-    height: 70px;
+    height: 15vh;
     background: rgba(255, 255, 255, 0.5);
     display: flex;
     justify-content: center;
@@ -42,8 +42,8 @@ body
     position: relative;
     margin-right: 27%;
     list-style: none;
-    width: 240px;
-    height: 90px;
+    width: 15vw;
+    height: 10vh;
     z-index: 1;
 }
 
@@ -79,7 +79,7 @@ body
 {
     position: absolute;
     margin-left: -18.5px;
-    top: -50%;
+    top: -10%;
     width: 70px;
     height: 70px;
     background-color: rgb(171, 226, 245);
@@ -88,20 +88,20 @@ body
 }
 .navi ul li:nth-child(1).active ~ .indicator
 {
-    transform: translateX(calc(155px * 0));
+    transform: translateX(calc(150% * 0));
 }
 
 .navi ul li:nth-child(2).active ~ .indicator
 {
-    transform: translateX(calc(290px * 1));
+    transform: translateX(calc(340% * 1));
 }
 
 .navi ul li:nth-child(3).active ~ .indicator
 {
-    transform: translateX(calc(290.5px * 2));
+    transform: translateX(calc(342% * 2));
 }
 
 .navi ul li:nth-child(4).active ~ .indicator
 {
-    transform: translateX(calc(291px * 3));
+    transform: translateX(calc(342% * 3));
 }
