--- a/CSS/bathing_log.css
+++ b/CSS/bathing_log.css
@@ -1,11 +1,32 @@
 @charset "utf-8";
 
-body
-{
-    background-color: lawngreen;
-}
-
 .log
 {
     background: rgba(255, 255, 255, 0.5);
+    width: 100%;
+    height: 90%;
+    margin-top: 15%;
 }
+
+h2
+{
+    padding: 0;
+    bottom: 0;
+    margin-bottom: -5%;
+    margin-left: 5%;
+}
+
+h4
+{
+    padding: 0;
+    bottom: 0;
+    text-align: center;
+}
+
+h6
+{
+    top: -30%;
+    margin-left: 85%;
+    color: rgba(100, 100, 100, 0.5);
+}
+  
