--- a/CSS/dressbuy.css
+++ b/CSS/dressbuy.css
@@ -1,44 +1,3 @@
-.md_transition {
-
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transition: transform 1.5s cubic-bezier(.39, .575, .565, 1) 0.1s; 
-    z-index: 999999;
-}
-.md_transition::before {
-
-    background: -webkit-gradient(linear, left bottom, left top, from(hsla(0, 0%, 100%, 0)), color-stop(33.33333%, #fff), color-stop(66.66667%, #fff), to(hsla(0, 0%, 100%, 0)));
-    background: -o-linear-gradient(bottom, hsla(0, 0%, 100%, 0) 0, #fff 33.33333%, #fff 66.66667%, hsla(0, 0%, 100%, 0) 100%);
-    background: linear-gradient(0deg, hsla(0, 0%, 100%, 0), #fff 33.33333%, #fff 66.66667%, hsla(0, 0%, 100%, 0));
-    content: "";
-    display: block;
-    width: 100%;
-    height: 300%;
-    position: absolute;
-    left: 0;
-    top: -100%;
-}
-body.is_remove .md_transition {
-
-    -webkit-animation: maskCloseTransition .4s cubic-bezier(.47, 0, .745, .715) 0s 1 forwards;
-    animation: maskCloseTransition .1s cubic-bezier(.47, 0, .745, .715) 0s 1 forwards;
-
-}
-body:not(.is_fade) .md_transition {
-    transform: translateY(-200%);
-}
-@-webkit-keyframes maskCloseTransition {
-
-    0% { transform: translateY(200%); }
-    to { transform: translate(0); }
-}
-@keyframes maskCloseTransition {
-    0% { transform: translateY(200%); }
-    to { transform: translate(0); }
-}
 body{
     margin:0px;
     margin-bottom:0px;
@@ -55,14 +14,22 @@ img.background_1{
     margin-top: 0px;
 
 }
-
 img.background_2{
     position:relative;
-    width: 35%;
-    height: auto;
-    vertical-align: top;
+    margin-left: 8%;
+    width: 30%;
+    height:20%;
+    vertical-align:center;
     background-size: contain;
-    margin-top: -55%;
+    
+}
+div.background_2{
+    position:relative;
+    width: 80%;
+    height:50%;
+    vertical-align:center;
+    background-size: contain;
+    margin-top: -50%;
 }
 
 div.header{
@@ -74,8 +41,7 @@ div.header{
         background-color: rgba(255, 255, 255, 0.61);
 }
 div.footer{
-    
-    z-index: 100000;
+    z-index:100000;/*前面に表示*/
 }
 
 /*購入ボタン*/
@@ -87,7 +53,7 @@ div.button001 a{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-top: -18%;
+    margin-top:1%;
     margin-left:8%;
     max-width: 280px;
     padding: 10px 25px;
@@ -114,3 +80,51 @@ div.button001 a:hover:after {
     border-color: #FFF;
 }
 /*購入ボタンend*/
+
+/*衣装一覧*/
+.p{
+    font-size: 80px;
+    font-family: 'Comic Sans MS';
+}
+.container {
+    float: right;
+    width: 55%;
+    height: 340px;
+    position:relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 80% 80%;
+    gap: 20px;
+    margin-top:-38.5%;
+    margin-right: 2%;
+  
+    
+}
+
+.grid-item {
+    background-color: rgba(255, 255, 255, 0.61);
+    text-align: center;
+    border: 1px solid ;
+    border-color:rgb(124, 124, 121);
+    border-radius: 7px;
+    font-size: 100%;
+    font-family: 'Comic Sans MS';
+    font-weight: 500;
+
+    
+}
+/*.container:hover {
+    color: red;
+}*/
+
+img.background_3{
+    position:relative;
+    width: 38%;
+    height: auto;
+    vertical-align: top;
+    background-size: contain;
+    margin-top: -5%;
+}
+
+
+/*衣装一覧end*/
