--- a/CSS/bathing_log.css
+++ b/CSS/bathing_log.css
@@ -10,9 +10,10 @@
 
 h2
 {
+    font-family: serif;
     padding: 0;
     bottom: 0;
-    margin-bottom: -5%;
+    margin-bottom: -4%;
     margin-left: 5%;
 }
 
@@ -25,7 +26,7 @@ h4
 
 h6
 {
-    top: -30%;
+    top: -26%;
     margin-left: 85%;
     color: rgba(100, 100, 100, 0.5);
 }
