--- a/CSS/dressbuy.css
+++ b/CSS/dressbuy.css
@@ -47,7 +47,9 @@ div.footer{
 /*購入ボタン*/
 div.button001 a{
     text-decoration: none;
-    background: #eee;
+    background: rgba(137, 236, 56, 0.849);
+    border-color: black;
+    border-width: 1px;
     border-radius: 3px;
     position: relative;
     display: flex;
@@ -58,13 +60,15 @@ div.button001 a{
     max-width: 280px;
     padding: 10px 25px;
     color: #313131;
-    transition: 0.3s ease-in-out;
-    font-weight: 500;
+    transition: 0.1s ease-in-out;
+    font-weight: 1000;
     font-family:'Fredoka One', cursive; 
 }
 div.button001 a:hover {
-    background: #313131;
-    color: #FFF;
+    background: #ffffff;
+    color: rgb(0, 0, 0);
+    border-color: black;
+    border-width: 23px;
 }
 div.button001 a:after {
     border-top: 3px solid #313131;
@@ -77,19 +81,23 @@ div.button001 a:after {
     transition: 0.3s ease-in-out;
 }
 div.button001 a:hover:after {
-    border-color: #FFF;
+    border-color: rgba(31, 30, 30, 0.555);
 }
 /*購入ボタンend*/
 
 /*衣装一覧*/
-.p{
-    font-size: 80px;
+p{
+    font-size: 20px;
+}
+.price{
+    margin-top: -0.1%;
+    font-size: 20px;
     font-family: 'Comic Sans MS';
 }
 .container {
     float: right;
     width: 55%;
-    height: 340px;
+    height: 342px;
     position:relative;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -97,8 +105,7 @@ div.button001 a:hover:after {
     gap: 20px;
     margin-top:-38.5%;
     margin-right: 2%;
-  
-    
+
 }
 
 .grid-item {
@@ -107,16 +114,15 @@ div.button001 a:hover:after {
     border: 1px solid ;
     border-color:rgb(124, 124, 121);
     border-radius: 7px;
-    font-size: 100%;
-    font-family: 'Comic Sans MS';
-    font-weight: 500;
-
+    margin-top: -1.5%;
     
 }
-/*.container:hover {
-    color: red;
-}*/
-
+.grid-item:hover{
+	border-color:rgba(206, 241, 109, 0.568); 
+    background-color: rgba(245, 240, 240, 0.274);
+    border-width:5px;
+    
+}
 img.background_3{
     position:relative;
     width: 38%;
