--- a/CSS/bathing_log.css
+++ b/CSS/bathing_log.css
@@ -5,7 +5,7 @@
     background: rgba(255, 255, 255, 0.5);
     width: 100%;
     height: 90%;
-    margin-top: 15%;
+    margin-top: 5%;
 }
 
 h2
@@ -15,6 +15,7 @@ h2
     bottom: 0;
     margin-bottom: -4%;
     margin-left: 5%;
+    z-index: 2;
 }
 
 h4
@@ -22,6 +23,7 @@ h4
     padding: 0;
     bottom: 0;
     text-align: center;
+    z-index: 2;
 }
 
 h6
@@ -29,5 +31,46 @@ h6
     top: -26%;
     margin-left: 85%;
     color: rgba(100, 100, 100, 0.5);
+    z-index: 2;
 }
-  
+
+/** ヘッダーぐちゃぐちゃにならない用 */
+div.header{
+    position: fixed;
+        top: 0%;
+        width: 100%;
+        height: 16%;
+        z-index:1000;
+        padding-bottom:10px;
+}
+div.footer{
+    position: relative;
+    z-index: 1000;
+}
+/** 背景 */
+body{
+    margin:0%;
+    margin-bottom:0%;
+    padding:0%;
+    overflow: hidden;
+}
+/** 背景 */
+img.background_1{
+    width: 100%;
+    height: auto;
+    vertical-align: top;
+    background-size: contain;
+    margin-top: 0%;
+    z-index: 1;
+}
+/**立ち絵*/
+img.background_2{
+    position:relative;
+    width: 45%;
+    height: auto;
+    vertical-align: top;
+    background-size: contain;
+    margin-left:50%;
+    margin-top: -45%;
+    z-index:    2;
+}
