--- a/CSS/dressbuy.css
+++ b/CSS/dressbuy.css
@@ -21,7 +21,7 @@ img.background_2{
     height:20%;
     vertical-align:center;
     background-size: contain;
-    
+
 }
 div.background_2{
     position:relative;
@@ -33,12 +33,12 @@ div.background_2{
 }
 
 div.header{
-        position: fixed;
-        top: 0px;
+    position: fixed;
+        top: 0%;
         width: 100%;
         height: 16%;
-        border:1px solid #ccc;
-        background-color: rgba(255, 255, 255, 0.61);
+        z-index:1000;
+        padding-bottom:10px;
 }
 div.footer{
     z-index:100000;/*前面に表示*/
@@ -62,7 +62,7 @@ div.button001 a{
     color: #313131;
     transition: 0.1s ease-in-out;
     font-weight: 1000;
-    font-family:'Fredoka One', cursive; 
+    font-family:'Fredoka One', cursive;
 }
 div.button001 a:hover {
     background: #ffffff;
@@ -115,13 +115,13 @@ p{
     border-color:rgb(124, 124, 121);
     border-radius: 7px;
     margin-top: -1.5%;
-    
+
 }
 .grid-item:hover{
-	border-color:rgba(206, 241, 109, 0.568); 
+	border-color:rgba(206, 241, 109, 0.568);
     background-color: rgba(245, 240, 240, 0.274);
     border-width:5px;
-    
+
 }
 img.background_3{
     position:relative;
