--- a/CSS/header.css
+++ b/CSS/header.css
@@ -10,8 +10,10 @@
 .haikei{
     opacity: 0.3;
 }
+
 .kuuhaku{
     padding-top:3%;
     padding-bottom:2%;
     background-color: rgba(255, 255, 255, 0.589);
-  
+
+}
