--- a/CSS/bathing_log.css
+++ b/CSS/bathing_log.css
@@ -1,37 +1,43 @@
-@charset "utf-8";
-
-.log
-{
-    background: rgba(255, 255, 255, 0.5);
-    width: 100%;
-    height: 90%;
-    margin-top: 5%;
+/** テーブル関係 */
+.setting,td,tr{
+    position:relative;
+    width:100%;
+    height: 7vh;
+    z-index: 500;
 }
-
-h2
-{
-    font-family: serif;
-    padding: 0;
-    bottom: 0;
-    margin-bottom: -4%;
-    margin-left: 5%;
-    z-index: 2;
+.setting td{
+    border-bottom: 1px solid #bbb;
 }
+.setting td::before {
+    content: attr(data-label);
+    font-weight: bold;
+    position: absolute;
+    left: 10%;
+  }
 
-h4
-{
-    padding: 0;
-    bottom: 0;
-    text-align: center;
-    z-index: 2;
+.setting{
+    margin-top: -48%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    background-color: rgb(255, 255, 255, 0.589);
+    border-collapse: collapse;
 }
+.setting tr {
+    border-bottom: 1px solid #bbb;
+  }
 
-h6
-{
-    top: -26%;
-    margin-left: 85%;
-    color: rgba(100, 100, 100, 0.5);
-    z-index: 2;
+.setting th,.setting td{
+    padding: 1% 0;
+  text-align: center;
+}
+/** テーブル内の文字 */
+.mojibox{
+    padding-left:20%;
+    margin-bottom:10%;
+}
+.moji{
+    text-decoration-line: none;
+    color: black;
 }
 
 /** ヘッダーぐちゃぐちゃにならない用 */
