--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
+
 /**
 {
     margin: 0;
@@ -23,15 +24,16 @@ body
 {
     position: fixed;
     bottom: 0;
-    width: 100%;
-    height: 15vh;
+    width: 100vw;
+    height: 12vh;
     background: rgba(255, 255, 255, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
 
-    
+
 }
+
 
 .navi ul
 {
@@ -47,6 +49,9 @@ body
     width: 15vw;
     height: 10vh;
     z-index: 1;
+    /*アニメーションの速度設定*/
+    -webkit-transition: all 0.5s ease-out;
+        transition: all 0.5s ease-out;
 }
 
 .navi ul li a
@@ -65,13 +70,19 @@ body
 {
     position: relative;
     display: block;
-    line-height: 90px;
-    font-size: 2em;
+    line-height: 30%;
+    font-size: 300%;
     text-align: center;
     transition: 0.5s;
     color: rgb(21, 183, 237);
 }
+  /*ホバーエフェクト*/
+  .navi ul li:hover {
+    /*ちょっと浮かせる*/
+    transform: translateY(-20%);
+  }
 
+/*
 .navi ul li.active a .icon
 {
     transform: translateY(-31px);
@@ -88,6 +99,7 @@ body
     border-radius: 50%;
     transition: 0.5s;
 }
+
 .navi ul li:nth-child(1).active ~ .indicator
 {
     transform: translateX(calc(150% * 0));
@@ -107,3 +119,4 @@ body
 {
     transform: translateX(calc(342% * 3));
 }
+*/
