--- a/CSS/dressbuy_finish.css
+++ b/CSS/dressbuy_finish.css
@@ -1,6 +1,6 @@
 body{
-    margin:0px;
-    margin-bottom:0px;
+    margin:0%;
+    margin-bottom:0%;
     padding:0%;
     overflow: hidden;
 }
@@ -44,13 +44,46 @@ div.footer{
     z-index:100000;/*前面に表示*/
 }
 
-p{
-    float: right;
-    position: relative;
-    margin-top: -30%;
-    margin-right: 28%;
-    z-index: 100000;
-    font-size: 550%;
-    font-family:  'Fredoka One', cursive;
-}
+/*STARTボタン*/
+.fadeIn{
+  animation-name:fadeInAnime;
+  animation-duration:1s;
+  animation-fill-mode:forwards;
+  opacity:0;
+  }
+  
+  @keyframes fadeInAnime{
+    from {
+      opacity: 0;
+    }
+  
+    to {
+      opacity: 1;
+    }
+  }
+  
 
+  .only-background {
+    position: absolute;
+    font-size: 800%;
+    top: 50%;
+    left:60%;
+    font-family: 'Fredoka One', cursive;/*基本フォント*/
+    
+    color:rgb(102, 94, 94);
+    padding:0;
+    margin: 1px; 
+    padding: 16px;
+    color: rgb(41, 20, 20);
+    transition: background 1s;
+    transition: all 0.5s 0s ease;
+
+    
+  }
+
+    a {
+        text-decoration:none; 
+    }
+   
+
+  /*STARTボタン end*/
