--- a/CSS/title.css
+++ b/CSS/title.css
@@ -42,7 +42,6 @@ img.background_2{
     }
   }
 
-
   .only-background {
     position: absolute;
     font-size: 800%;
@@ -58,7 +57,8 @@ img.background_2{
     transition: background 1s;
     transition: all 0.5s 0s ease;
 
-
+    background:transparent;
+    border: 2px solid transparent;
   }
 
 
