--- a/CSS/character.css
+++ b/CSS/character.css
@@ -40,7 +40,36 @@ body:not(.is_fade) .md_transition {
   0% { transform: translateY(200%); }
   to { transform: translate(0); }
 }
+/* 好感度バー */
+div {
+  overflow: hidden;
+}
 
+div > div {
+  transform: translateX(calc(-90% + var(--w)));
+  width: 90%;
+}
+/* 好感度ボックス */
+.fan-box{
+  margin-left: 60%;
+  margin-top: -50%;
+  font-size: 130%;
+  font-weight: bold;
+}
+/* 文字ボックス */
+.moji-box{
+  margin-left: 15%;
+  margin-top: 3%;
+  line-height:300%;
+  font-size: 160%;
+  font-weight: bold;
+}
+/* 文字 */
+p {
+  position: absolute;
+  text-align:justify;
+  z-index: 3;
+}
 /** ヘッダーぐちゃぐちゃにならない用 */
 div.header{
   position: fixed;
@@ -68,6 +97,7 @@ img.background_1{
   vertical-align: top;
   background-size: contain;
   margin-top: 0%;
+  opacity: 0.3;
   z-index: 1;
 }
 /**立ち絵*/
