--- a/CSS/my_page.css
+++ b/CSS/my_page.css
@@ -1,119 +1,12 @@
-/** テーブル関係 */
-.setting,td,tr{
-  position:relative;
-  width:100%;
-  height: 7vh;
-  z-index: 500;
-}
-.setting td{
-  border-bottom: 1px solid #bbb;
-}
-.setting td::before {
-  content: attr(data-label);
-  font-weight: bold;
+form{
   position: absolute;
-  left: 10%;
-}
-
-.i
-{
-  list-style: none;
-  margin-top: 5%;
-  padding: auto;
-  letter-spacing: 0.15em;
-}
-.setting{
-  margin-top: -50%;
-  border-collapse: collapse;
-  border-spacing: 0;
-  background-color: rgb(255, 255, 255, 0.589);
-  border-collapse: collapse;
-
-}
-.setting tr {
-  border-bottom: 1px solid #bbb;
-}
-
-.t
-{
-  list-style: none;
-  margin-bottom: 5%;
-  padding: auto;
+  margin-left: 25%;
+  top: 45%;
+  width: 50%;
   text-align: center;
+  background-color:lightgrey;
+  z-index: 1500;
 }
-
-h4
-{
-  color:rgba(100, 100, 100, 0.9);
-  text-align: right;
-  margin-right: 10%;
-}
-
-.sns
-{
-
-  margin: auto auto 10% 0;
-}
-
-.ss
-{
-  display: flex;
-  position: absolute;
-  top: 51%;
-  left: 40%;
-  z-index: 1000;
-}
-
-.s-icon
-{
-  list-style: none;
-  margin-left: 0.5%;
-}
-
-.icons1
-{
-  margin-left: 0;
-  position: relative;
-  display: block;
-  font-size: 500%;
-  text-align: center;
-  color: rgb(24, 119, 242);
-}
-
-.icons1:hover
-{
-  color: navy;
-}
-
-.icons2
-{
-  margin-left: 0;
-  position: relative;
-  display: block;
-  font-size: 500%;
-  text-align: center;
-  color: #1da1f2;
-}
-
-.icons2:hover
-{
-  color: navy;
-}
-.setting th,.setting td{
-  padding: 1% 0;
-text-align: center;
-}
-/** テーブル内の文字 */
-.mojibox{
-  padding-left:20%;
-  margin-bottom:10%;
-}
-.moji{
-  font-weight:bold;
-  text-decoration-line: none;
-  color: black;
-}
-
 /** ヘッダーぐちゃぐちゃにならない用 */
 div.header{
   position: fixed;
@@ -150,7 +43,7 @@ img.background_2{
   height: auto;
   vertical-align: top;
   background-size: contain;
-  margin-left:50%;
+  margin-left:60%;
   margin-top: -45%;
   z-index:    2;
 }
