--- a/CSS/character.css
+++ b/CSS/character.css
@@ -40,6 +40,13 @@ body:not(.is_fade) .md_transition {
   0% { transform: translateY(200%); }
   to { transform: translate(0); }
 }
+a {
+  position: relative;
+  margin-left: 80%;
+  z-index: 1000;
+  font-size: 130%;
+  font-weight: bold;
+}
 /* 好感度バー */
 div {
   overflow: hidden;
