--- a/CSS/bathing_log.css
+++ b/CSS/bathing_log.css
@@ -1,42 +1,59 @@
+
 /** テーブル関係 */
+
+
 .setting,td,tr{
     position:relative;
     width:100%;
-    height: 7vh;
+    height: 9vh;
     z-index: 500;
+    
+    
 }
 .setting td{
-    border-bottom: 1px solid #bbb;
+  padding: 1% 0;
+  text-align: center;
+  border-bottom: 1px solid #bbb;
+    
 }
 .setting td::before {
     content: attr(data-label);
     font-weight: bold;
     position: absolute;
     left: 10%;
+    margin-left: 10%;
   }
 
 .setting{
-    margin-top: -48%;
+    margin-top: -0.9%;
     border-collapse: collapse;
     border-spacing: 0;
     background-color: rgb(255, 255, 255, 0.589);
-    border-collapse: collapse;
+    position:absolute;
+    
+    overflow-y: scroll;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
+    display:block;
+    height:455px;  /*スクロールの高さ*/
+    
 }
 .setting tr {
+  
     border-bottom: 1px solid #bbb;
+    overflow: auto;
   }
 
-.setting th,.setting td{
-    padding: 1% 0;
-  text-align: center;
-}
 /** テーブル内の文字 */
 .mojibox{
-    padding-left:20%;
+    
     margin-bottom:10%;
+    margin-left: 120px;
+    width: 10%;
 }
 .moji{
-    text-decoration-line: none;
+   
+    font-size: 100%;
     color: black;
 }
 
@@ -80,3 +97,93 @@ img.background_2{
     margin-top: -45%;
     z-index:    2;
 }
+
+/*プルダウン*/
+.cp_ipselect {
+	position: relative;
+	width: 20%;
+	margin-top: -48.5% ;
+  margin-left: 9.5%;
+	text-align: center;
+  z-index:6000;
+}
+.cp_sl06 {
+	position: relative;
+	font-family: inherit;
+	background-color: transparent;
+	width: 100%;
+	padding: 1% ;
+	font-size: 25px;
+	border-radius: 0;
+	border: none;
+	border-bottom: 1px solid rgb(0, 0, 0);
+}
+.cp_sl06:focus {
+	outline: none;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.514);
+}
+.cp_ipselect .cp_sl06 {
+	appearance: none;
+	-webkit-appearance:none
+}
+.cp_ipselect select::-ms-expand {
+	display: none;
+}
+.cp_ipselect:after {
+	position: absolute;
+	top: 18px;
+	right: 10px;
+	
+	content: '';
+	border-left: 6px solid transparent;
+	border-right: 6px solid transparent;
+	border-top: 6px solid rgba(0, 0, 0, 0.925);
+	pointer-events: none;
+}
+.cp_sl06_selectlabel {
+	color: rgba(0,0,0, 0.5);
+	font-size: 18px;
+	font-weight: normal;
+	position: absolute;
+	pointer-events: none;
+	left: 10%;
+	top: 10%;
+	transition: 0.2s ease all;
+}
+.cp_sl06:focus ~ .cp_sl06_selectlabel, .cp_sl06:valid ~ .cp_sl06_selectlabel {
+	color: #da3c41;
+	top: 0px;
+	transition: 0.2s ease all;
+	font-size: 14px;
+}
+.cp_sl06_selectbar {
+	position: relative;
+	display: block;
+	width: 100%;
+}
+.cp_sl06_selectbar:before, .cp_sl06_selectbar:after {
+	content: '';
+	height: 2px;
+	width: 0;
+	bottom: 0.5px;
+	position: absolute;
+	background: #da3c41;
+	transition: 0.2s ease all;
+}
+.cp_sl06_selectbar:before {
+	left: 50%;
+}
+.cp_sl06_selectbar:after {
+	right: 50%;
+}
+.cp_sl06:focus ~ .cp_sl06_selectbar:before, .cp_sl06:focus ~ .cp_sl06_selectbar:after {
+	width: 50%;
+}
+.cp_sl06_highlight {
+	position: absolute;
+	top: 50%;
+	left: 0;
+	pointer-events: none;
+	opacity: 0.5;
+}
+/*プルダウンend*/
