--- a/CSS/character.css
+++ b/CSS/character.css
@@ -42,11 +42,19 @@ body:not(.is_fade) .md_transition {
 }
 a {
   position: relative;
-  margin-left: 80%;
-  z-index: 1000;
+  margin-left: 90%;
+  z-index: 3;
   font-size: 130%;
   font-weight: bold;
 }
+img.icon {
+  position: fixed;
+  margin-top: 1%;
+  width: 5%;
+  height: 8%;
+  z-index: 3;
+}
+
 /* 好感度バー */
 div {
   overflow: hidden;
