--- a/CSS/dressbuy.css
+++ b/CSS/dressbuy.css
@@ -1,3 +1,46 @@
+/* 画面遷移アニメーション */
+.md_transition {
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  transition: transform 1.5s cubic-bezier(.39, .575, .565, 1) 0.1s;
+    z-index: 999999;
+}
+.md_transition::before {
+
+    background: -webkit-gradient(linear, left bottom, left top, from(hsla(0, 0%, 100%, 0)), color-stop(33.33333%, #fff), color-stop(66.66667%, #fff), to(hsla(0, 0%, 100%, 0)));
+    background: -o-linear-gradient(bottom, hsla(0, 0%, 100%, 0) 0, #fff 33.33333%, #fff 66.66667%, hsla(0, 0%, 100%, 0) 100%);
+    background: linear-gradient(0deg, hsla(0, 0%, 100%, 0), #fff 33.33333%, #fff 66.66667%, hsla(0, 0%, 100%, 0));
+    content: "";
+    display: block;
+    width: 100%;
+    height: 300%;
+    position: absolute;
+    left: 0;
+    top: -100%;
+}
+body.is_remove .md_transition {
+
+    -webkit-animation: maskCloseTransition .4s cubic-bezier(.47, 0, .745, .715) 0s 1 forwards;
+    animation: maskCloseTransition .1s cubic-bezier(.47, 0, .745, .715) 0s 1 forwards;
+
+}
+body:not(.is_fade) .md_transition {
+    transform: translateY(-200%);
+}
+@-webkit-keyframes maskCloseTransition {
+
+    0% { transform: translateY(200%); }
+    to { transform: translate(0); }
+}
+@keyframes maskCloseTransition {
+    0% { transform: translateY(200%); }
+    to { transform: translate(0); }
+}
+
 body{
     margin:0px;
     margin-bottom:0px;
@@ -21,7 +64,7 @@ img.background_2{
     height:20%;
     vertical-align:center;
     background-size: contain;
-    
+
 }
 div.background_2{
     position:relative;
@@ -33,12 +76,12 @@ div.background_2{
 }
 
 div.header{
-        position: fixed;
-        top: 0px;
+    position: fixed;
+        top: 0%;
         width: 100%;
         height: 16%;
-        border:1px solid #ccc;
-        background-color: rgba(255, 255, 255, 0.61);
+        z-index:1000;
+        padding-bottom:10px;
 }
 div.footer{
     z-index:100000;/*前面に表示*/
@@ -62,7 +105,7 @@ div.footer{
     color: #313131;
     transition: 0.1s ease-in-out;
     font-weight: 1000;
-    font-family:'Fredoka One', cursive; 
+    font-family:'Fredoka One', cursive;
 }
 .button001 a:hover {
     background: #ffffff;
@@ -115,13 +158,13 @@ p{
     border-color:rgb(124, 124, 121);
     border-radius: 7px;
     margin-top: -1.5%;
-    
+
 }
 .grid-item:hover{
-	border-color:rgba(206, 241, 109, 0.568); 
+	border-color:rgba(206, 241, 109, 0.568);
     background-color: rgba(245, 240, 240, 0.274);
     border-width:5px;
-    
+
 }
 img.background_3{
     position:relative;
