--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -38,13 +38,13 @@ body
 .navi ul
 {
     display: flex;
-    width: auto;
+    width: 100%;
 }
 
 .navi ul li
 {
     position: relative;
-    margin-right: 27%;
+    margin-right: 32%;
     list-style: none;
     width: 15vw;
     height: 10vh;
@@ -56,7 +56,7 @@ body
 
 .navi ul li a
 {
-    position: relative;
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,7 +71,7 @@ body
     position: relative;
     display: block;
     line-height: 30%;
-    font-size: 300%;
+    font-size: 350%;
     text-align: center;
     transition: 0.5s;
     color: rgb(21, 183, 237);
