--- a/CSS/header.css
+++ b/CSS/header.css
@@ -4,7 +4,7 @@
 .nitiji{
     position: absolute;
     margin-top:-3.5%;
-    margin-left: 80%;
+    margin-left: 82.5%;
     font-size: 200%;
 }
 .rogo{
@@ -22,14 +22,20 @@
 }
 
 /* 好感度バー */
-div.fan-var_2 {
+.fan-var_2{
+    margin-left:8%;
+    margin-top: 1%;
+}
+div {
     overflow: hidden;
+   
   }
-
+  
   div > div {
     transform: translateX(calc(-90% + var(--w)));
     width: 90%;
   }
+  
   /* 好感度ボックス */
   .fan-box_2{
     margin-left: 0%;
