--- a/CSS/dressbuy_finish.css
+++ b/CSS/dressbuy_finish.css
@@ -17,11 +17,12 @@ img.background_1{
 img.background_2{
     position:relative;
     margin-left: 15%;
-    width: 45%;
-    height:30%;
+    width: 40%;
+    height:105%;
     vertical-align:center;
     background-size: contain;
-    
+    z-index: 10000;
+
 }
 div.background_2{
     position:relative;
@@ -51,39 +52,39 @@ div.footer{
   animation-fill-mode:forwards;
   opacity:0;
   }
-  
+
   @keyframes fadeInAnime{
     from {
       opacity: 0;
     }
-  
+
     to {
       opacity: 1;
     }
   }
-  
+
 
   .only-background {
     position: absolute;
-    font-size: 800%;
+    font-size: 500%;
     top: 50%;
     left:60%;
     font-family: 'Fredoka One', cursive;/*基本フォント*/
-    
+
     color:rgb(102, 94, 94);
     padding:0;
-    margin: 1px; 
+    margin: 1px;
     padding: 16px;
     color: rgb(41, 20, 20);
     transition: background 1s;
     transition: all 0.5s 0s ease;
 
-    
+
   }
 
     a {
-        text-decoration:none; 
+        text-decoration:none;
     }
-   
+
 
   /*STARTボタン end*/
