--- a/CSS/header.css
+++ b/CSS/header.css
@@ -23,8 +23,9 @@
 
 /* 好感度バー */
 .fan-var_2{
-    margin-left:8%;
-    margin-top: 1%;
+    margin-left:20%;
+    
+    width: 60%;
 }
 div {
     overflow: hidden;
@@ -39,8 +40,7 @@ div {
   /* 好感度ボックス */
   .fan-box_2{
     margin-left: 0%;
-    margin-top: 0%;
     text-align: center;
-    font-size: 10%;
+    font-size: 100%;
     font-weight: bold;
   }
