--- a/CSS/character.css
+++ b/CSS/character.css
@@ -119,11 +119,11 @@ img.background_1{
 /**立ち絵*/
 img.background_2{
   position:relative;
-  width: 45%;
-  height: auto;
+  width: 25%;
+  height: 25%;
   vertical-align: top;
   background-size: contain;
-  margin-left:50%;
-  margin-top: -45%;
+  margin-left:55%;
+  margin-top: -42%;
   z-index:    2;
 }
