--- a/CSS/index.css
+++ b/CSS/index.css
@@ -73,11 +73,11 @@ img.background_1{
 /**立ち絵*/
 img.background_2{
     position:relative;
-    width: 20%;
-    height: auto;
+    width: 30%;
+    height: 30%;
     vertical-align: top;
     background-size: contain;
-    margin-left:70%;
-    margin-top: -45%;
+    margin-left:50%;
+    margin-top: -47.5%;
     z-index:    2;
 }
