--- a/CSS/bathing_log.css
+++ b/CSS/bathing_log.css
@@ -7,14 +7,14 @@
     width:100%;
     height: 8vh;
     z-index: 500;
-    
-    
+
+
 }
 .setting td{
   padding: 1% 0;
   text-align: center;
   border-bottom: 1px solid #bbb;
-    
+
 }
 .setting td::before {
     content: attr(data-label);
@@ -30,29 +30,29 @@
     border-spacing: 0;
     background-color: rgb(255, 255, 255, 0.589);
     position:absolute;
-    
+
     overflow-y: scroll;
     white-space: nowrap;
     -webkit-overflow-scrolling: touch;
     display:block;
     height:430px;  /*スクロールの高さ*/
-    
+
 }
 .setting tr {
-  
+
     border-bottom: 1px solid #bbb;
     overflow: auto;
   }
 
 /** テーブル内の文字 */
 .mojibox{
-    
+
     margin-bottom:10%;
     margin-left: 120px;
     width: 10%;
 }
 .moji{
-   
+
     font-size: 100%;
     color: black;
 }
@@ -88,19 +88,19 @@ img.background_1{
 }
 /**立ち絵*/
 img.background_2{
-    position:relative;
-    width: 45%;
-    height: auto;
-    vertical-align: top;
-    background-size: contain;
-    margin-left:50%;
-    margin-top: -45%;
-    z-index:    2;
+  position:relative;
+  width: 25%;
+  height: 25%;
+  vertical-align: top;
+  background-size: contain;
+  margin-left:60%;
+  margin-top: -45%;
+  z-index:    2;
 }
 
 /*プルダウン*/
 .cp_ipselect {
-  
+
 	position: relative;
 	width: 20%;
 	margin-top: -49.5% ;
@@ -134,7 +134,7 @@ img.background_2{
 	position: absolute;
 	top: 18px;
 	right: 10px;
-	
+
 	content: '';
 	border-left: 6px solid transparent;
 	border-right: 6px solid transparent;
@@ -191,7 +191,7 @@ img.background_2{
 
 /*送信ボタン*/
 .search{
-  
+
   display:inline-block;
   text-decoration: none;
   background: rgba(137, 236, 56, 0.849);
