--- a/CSS/name_change.css
+++ b/CSS/name_change.css
@@ -30,8 +30,8 @@ img.background_1{
 /**立ち絵*/
 img.background_2{
   position:relative;
-  width: 45%;
-  height: auto;
+  width: 25%;
+  height: 25%;
   vertical-align: top;
   background-size: contain;
   margin-left:60%;
