--- a/CSS/title.css
+++ b/CSS/title.css
@@ -47,7 +47,7 @@ img.background_2{
     font-size: 800%;
     bottom: 30vh;
     left:36%;
-    font-family: 'Fredoka One', cursive;/*基本フォント*/
+    font-family: 'Kosugi Maru', sans-serif;/*基本フォント*/
 
     color:rgb(102, 94, 94);
     padding:0;
