--- a/CSS/background_change.css
+++ b/CSS/background_change.css
@@ -58,8 +58,8 @@ a{
 .button001 a{
     background: rgba(137, 236, 56, 0.849);
     border-color: black;
-    border-width: 1px;
-    border-radius: 3px;
+    border-width: 1%;
+    border-radius: 3%;
     position: relative;
     display: flex;
     justify-content: space-around;
@@ -78,7 +78,7 @@ a{
     background: #ffffff;
     color: rgb(0, 0, 0);
     border-color: black;
-    border-width: 23px;
+    border-width: 3%;
 }
 .button001 a:after {
     border-top: 3px solid #313131;
@@ -121,6 +121,7 @@ p{
 .grid-item {
     /*background-color: rgba(255, 255, 255, 0.61);*/
     width: 90%;
+    padding-top: 1.5%;
     text-align: center;
     border: 1px solid ;
     border-color:rgb(204, 204, 204);
