--- a/CSS/establishment.css
+++ b/CSS/establishment.css
@@ -46,6 +46,7 @@ body:not(.is_fade) .md_transition {
     width:100%;
     height: 7vh;
     z-index: 500;
+    font-family: 'Kosugi Maru', sans-serif;
 }
 .setting td{
     border-bottom: 1px solid #bbb;
