--- a/CSS/header.css
+++ b/CSS/header.css
@@ -3,14 +3,17 @@
 }
 .nitiji{
     position: absolute;
-    margin-top:-3.5%;
+    margin-top:-2.5%;
     margin-left: 82.5%;
     font-size: 200%;
+    font-family: 'Kosugi maru' ,cursive;
 }
 .rogo{
     margin-left: 3%;
     font-size :200%;
+    font-family: 'Kosugi maru' ,cursive;
 }
+
 .haikei{
     opacity: 0.3;
 }
@@ -43,4 +46,5 @@ div {
     text-align: center;
     font-size: 100%;
     font-weight: bold;
+    font-family: 'Kosugi Maru', sans-serif;
   }
