--- a/CSS/index.css
+++ b/CSS/index.css
@@ -100,5 +100,6 @@ p{
     margin-left:28%;
     margin-top: -46%;
     z-index:    2;
-    font-size: 20px;
+    font-size: 140%;
+    font-family: 'Kosugi Maru', sans-serif;
 }
