--- a/CSS/my_page.css
+++ b/CSS/my_page.css
@@ -3,40 +3,45 @@ form{
   margin-left: 25%;
   top: 37%;
   width: 50%;
-  height: 30%;
+  height: 25%;
   text-align: center;
   background-color: rgba(255, 255, 255, 1);
+  border-radius: 2%;
   z-index: 1500;
   opacity: 0.9;
+  font-family:'Kosugi maru', cursive;
 }
 /*ボタン*/
 button{
   text-decoration: none;
-  background: rgba(137, 236, 56, 0.849);
-  border-color: black;
-  border-width: 1px;
-  border-radius: 3px;
-  position:relative ;
-  justify-content: space-around;
-  align-items: center;
-  margin-top:3%;
-  margin-left:-8%;
-  max-width: 280px;
-  padding: 10px 25px;
-  color: #313131;
-  transition: 0.1s ease-in-out;
-  font-weight: 1000;
-  font-family:'Fredoka One', cursive;
+    background: rgba(137, 236, 56, 0.849);
+    border-color: black;
+    border-width: 1px;
+    border-radius: 3px;
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top:3%;
+    margin-left:35%;
+    width: 30%;
+    padding: 10px 25px;
+    color: #000000;
+    transition: 0.1s ease-in-out;
+    font-weight: 1000;
+    font-family: 'Kosugi Maru', sans-serif;
+  
 }
 
 textarea{
-  font: 15px/24px sans-serif;
+  font-size: 100% ;
+  font-family:'Kosugi maru', cursive;
   height: 2em;
   width: 80%;
-  padding: 0 16px;
+  
   border-radius: 4px;
   border: none;
-  box-shadow: 0 0 0 1px #ccc inset;
+  box-shadow: 0 0 0 1px rgb(128, 127, 127) inset;
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
