--- a/CSS/name_change.css
+++ b/CSS/name_change.css
@@ -48,4 +48,5 @@ div.name_chenge{
   font-weight: bold;
   background-color: lightgray;
   opacity: 0.8;
+  font-family:  'Kosugi Maru', sans-serif;;
 }
